# video_joiner

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  modification.md  settings-default.ini
.github/workflows/: release.yml  rust.yml
readme_data/: frames.md
src/: audio.rs  group_split.rs  group_splitter.rs  helper_functions.rs  main.rs  switches.rs  video.rs
src/frame_shape/: audio.rs  frame_join.rs  mod.rs
