[package]
name = "video_joiner"
version = "0.2.6"
edition = "2021"
authors = ["Quiet-Clicking-Sounds <55921097+Quiet-Clicking-Sounds@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-sidecar = "2.0.2"
ffprobe = "0.4.0"
clap = {version = "4.5.0", features=["derive"]}
os_pipe = "1.2.0"
rand = "0.8.5"
rust-ini = "0.21.1"



[dev-dependencies]
json = "0.12.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[features]
# Debugging with this will slow the program.
hyperDebug = []
# extra debugging for temp files.
keepTempFiles = []
# outputs low level debug info from ffmpeg into /ffreport/ folder
# (this folder needs to be created before running the program)
ffmpegReport =[]
